# s2py

./: .gitignore  README.md  pyproject.toml  test.py
.github/: dependabot.yml
s2py/: __init__.py  lib.py
tests/: test_s2py.py
